# trctl

./: .editorconfig  .gitignore  Cargo.toml  README.md  RELEASE-CHECKLIST.md  build.rs  trctl.install
aur/: PKGBUILD
configs/: sysusers.conf  trmv-magnet.desktop  trmv.desktop
scripts/: _trctl  completed.conf  completed.sh  completed.toml  logging.sh  move.sh
src/: client.rs  config.rs  console.rs  db.rs  display.rs  errors.rs  escape.rs  lib.rs  main.rs  torrent.rs
